--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -8,20 +8,50 @@
     <div class="row">
       <div class="col-9">
         <h2>レシピの詳細</h2>
-        <div class="row">
-          <div class="col-8">
-            <% if @post.images.attached? %>
-                <% @post.images.each do |image| %>
-                  <%= image_tag image.variant(resize_to_limit: [300, 300]).processed,class:"img img-responsive full-width",size: "150×150" %>
-                <% end %>
-            <% end %>
-          </div>
-        </div>
-          <%= link_to customer_path(@customer.id) do %>
+         <%= link_to customer_path(@customer.id) do %>
           <%=image_tag @customer.get_profile_image(50,50) %>
           <% end %>
           <%=@customer.last_name %>
           <%=@customer.first_name %>
+            <div class="row">
+              <div class="col-8">
+                <% if @post.images.attached? %>
+                  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <% @post.images.count.times do |index| %>
+                       <% if index==0 %>
+                          <li data-target="#carouselExampleIndicators" data-slide-to="<%=index%>" class="active"></li>
+                        <% else %>
+                          <li data-target="#carouselExampleIndicators" data-slide-to="<%=index%>"></li>
+                        <% end %>
+                    　<% end %>
+                    </ol>
+                    <div class="carousel-inner">
+                     <% @post.images.each_with_index do |image,index|%>
+                        <% if index==0 %>
+                          <div class="carousel-item active">
+                          <%= image_tag image.variant(resize_to_limit: [500, 500]).processed,class:"img img-responsive w-100 img-cover" %>
+                          </div>
+                        <% else %>
+                          <div class="carousel-item">
+                          <%= image_tag image.variant(resize_to_limit: [500, 500]).processed,class:"img img-responsive w-100 img-cover" %>
+                          </div>
+                        <% end %>
+                     <% end %>
+                　　　 </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+              　　  </div>
+                <% end %>
+              </div>
+            </div>
+
         <div>
           <p>タイトル:<%=@post.title %></p>
           <p>ジャンル:<%=@post.genre.name %></p>
@@ -58,29 +88,30 @@
               <% if current_customer.email != 'guests@example.com' %>
                 <%= form_with model: [@post, @comment], url:post_comments_path(@post.id) do |f| %>
                   <%= f.text_area :body, rows: '3', placeholder: "コメントをここに",class: "form-control" %>
-                  <%= f.submit "送信する",class:"btn btn-outline-primary float-right " %>
+                  <div class="text-right"><%= f.submit "送信する",class:"btn btn-outline-primary " %></div>
                 <% end %>
               <% end %>
             </div>
 
         <div>
-          <div class="media">
             <% @post.comments.each do |comment| %>
-              <p><%= image_tag comment.customer.get_profile_image(30,30),class:"bd-placeholder-img mr-3" %></p>
-              <div class="media-body">
-                <p class="mt-0">
-                  <%= comment.customer.last_name %>
-                  <%= comment.customer.first_name %>
-　　　　　　　　</p>
-                  <%=comment.body %><br>
-                  <%= comment.created_at.strftime('%Y/%m/%d') %>
-                  <% if comment.customer == current_customer %>
-                    <%= link_to "削除", post_comment_path(comment.post_id, comment.id), method: :delete %>
-                  <% end %>
-              </div>
+             <div class="media mt-4 border-bottom">
+                <p><%= image_tag comment.customer.get_profile_image(30,30),class:"bd-placeholder-img mr-3" %></p>
+                <div class="media-body">
+                  <p class="mt-0">
+                    <%= comment.customer.last_name %>
+                    <%= comment.customer.first_name %>
+  　　　　      　　　　</p>
+                    <%=comment.body %><br>
+                    <%= comment.created_at.strftime('%Y/%m/%d') %>
+                    <% if comment.customer == current_customer %>
+                      <%= link_to "削除", post_comment_path(comment.post_id, comment.id), method: :delete %>
+                    <% end %>
+                </div>
+             </div>
             <% end %>
 
-          </div>
+
         </div>
       </div>
        <div class="col-3">
@@ -91,40 +122,3 @@
 
 
 
-<div class="container">
-  <div class="row">
-    <div class="col-12">
-      <div class="row">
-        <div class="col-8">
-          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-
-                <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: First slide"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#555" dy=".3em">First slide</text></svg>
-              </div>
-              <div class="carousel-item">
-                <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Second slide"><title>Placeholder</title><rect width="100%" height="100%" fill="#666"/><text x="50%" y="50%" fill="#444" dy=".3em">Second slide</text></svg>
-              </div>
-              <div class="carousel-item">
-                <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Third slide"><title>Placeholder</title><rect width="100%" height="100%" fill="#555"/><text x="50%" y="50%" fill="#333" dy=".3em">Third slide</text></svg>
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
