--- a/app/views/public/relationships/_follow.html.erb
+++ b/app/views/public/relationships/_follow.html.erb
@@ -1,38 +1,40 @@
 
 <% if customers.exists? %>
-  <% customers.each do |customer| %>
+
     <table class="table table-striped">
       <thead>
         <tr>
           <th scope="col"></th>
           <th scope="col"></th>
           <th scope="col"></th>
+          <th scope="col"></th>
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>
-            <%= image_tag customer.get_profile_image(50, 50) %>
-          </td>
-          <td>
-            <%= link_to customer_path(customer.id) do %>
-            <%= customer.last_name %><%= customer.first_name %>
-            <% end %>
-          </td>
-          <td>
-            <%= link_to customer_followings_path(customer.id) do %>
-            フォロー数: <%= customer.followings.count %>
-            <% end %>
-          </td>
-          <td>
-            <%= link_to customer_followers_path(customer.id) do %>
-            フォロワー数: <%= customer.followers.count %>
-            <% end %>
-          </td>
-        </tr>
+        <% customers.each do |customer| %>
+          <tr>
+            <td>
+              <%= image_tag customer.get_profile_image(50, 50) %>
+            </td>
+            <td>
+              <%= link_to customer_path(customer.id) do %>
+              <%= customer.last_name %><%= customer.first_name %>
+              <% end %>
+            </td>
+            <td>
+              <%= link_to customer_followings_path(customer.id) do %>
+              フォロー数: <%= customer.followings.count %>
+              <% end %>
+            </td>
+            <td>
+              <%= link_to customer_followers_path(customer.id) do %>
+              フォロワー数: <%= customer.followers.count %>
+              <% end %>
+            </td>
+          </tr>
+        <% end %>
       </tbody>
     </table>
-  <% end %>
 <% else %>
   <p>ユーザーはいません</p>
 <% end %>
