--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -53,7 +53,7 @@
             </div>
 
         <div>
-          <p>タイトル:<%=@post.title %></p>
+          <p><%=@post.title %></p>
           <p>ジャンル:<%=@post.genre.name %></p>
           <p>作り方:<%=@post.article %></p>
         </div>
