--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -16,8 +16,12 @@
   justify-content:center;
   align-items:center;
 }
-.top-but{
+.top-left-but{
   margin-right:30px;
+  margin-top:30px
+}
+.top-right-but{
+  margin-top:30px;
 }
 .nav-header{
   margin-bottom:20px;
