--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -12,6 +12,6 @@
   <h5>~オリジナルレシピを投稿したり、料理の幅を広げてみませんか？~</h5>
   </div>
   <div class="row top-row">
-    <%= link_to "新規登録", new_customer_registration_path,class:"btn btn-outline-primary btn-lg top-but" %>
-    <%= link_to "ログイン",new_customer_session_path,class:"btn btn-outline-primary btn-lg " %>
+    <%= link_to "新規登録", new_customer_registration_path,class:"btn btn-outline-primary btn-lg top-left-but" %>
+    <%= link_to "ログイン",new_customer_session_path,class:"btn btn-outline-primary btn-lg top-right-but" %>
   </div>
