--- a/app/views/admin/_header.html.erb
+++ b/app/views/admin/_header.html.erb
@@ -1,34 +1,46 @@
-<body>
+
   <header>
-      <h2>LOGO</h2>
-       <% if admin_signed_in? %>
-        <%= form_with url: admin_posts_path, method: :get do |f| %>
-         <%=f.text_field :search, :placeholder => "キーワード検索" %>
-         <%=f.submit'検索する' %>
-        <% end %>
-      <li>
-        <%= link_to "投稿一覧", admin_posts_path %>
-      </li>
-      <li>
-        <%= link_to "会員一覧", admin_customers_path %>
-      </li>
-      <li>
-        <%= link_to "ジャンル一覧", admin_genres_path %>
-      </li>
-      <li>
-        <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
-      </li>
-       <% else %>
-      <li>
-        <%= link_to "投稿一覧",posts_path %>
-      </li>
-      <li>
-        <%= link_to "新規登録",new_customer_registration_path %>
-      </li>
-      <li>
-        <%= link_to "ログイン",new_customer_session_path %>
-      </li>
-      <% end %>
+    <nav class="navbar navbar-light ">
+      <a class="navbar-brand" href="#">
+        <%= image_tag "logo.jpg",class:"d-inline-block align-top main-logo"%>
+        <span class="logo-title">cooking</span>
+      </a>
+    </nav>
+    <nav class="navbar navbar-expand-lg navbar-light nav-header">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <% if admin_signed_in? %>
+            <li class="nav-item active">
+              <%= link_to "投稿一覧", admin_posts_path,class:"nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "会員一覧", admin_customers_path,class:"nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "ジャンル一覧", admin_genres_path,class:"nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "ログアウト", destroy_admin_session_path, method: :delete,class:"nav-link" %>
+            </li>
+             <% else %>
+            <li class="nav-item">
+              <%= link_to "新規登録",new_customer_registration_path,class:"nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "ログイン",new_customer_session_path,class:"nav-link" %>
+            </li>
+            <% end %>
+          </ul>
+            <%= form_with url: admin_posts_path, method: :get,class:"form-inline my-2 my-lg-0" do |f| %>
+               <%=f.text_field :search, :placeholder => "キーワード検索",class:"form-control mr-sm-2" %>
+               <%=f.submit'検索する',class:"btn btn-outline-success my-2 my-sm-0" %>
+            <% end %>
+
+      </div>
+    </nav>
   </header>
- <%= yield %>
-</body>
+
