--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,31 +1,69 @@
-<%=render 'admin/header' %>
-<%=render 'admin/sidebar', genres: @genres %>
+<div class="container" >
+    <div class="row">
+      <div class="col-12">
+      <%=render 'admin/header' %>
+      </div>
+    </div>
 
-<h2><%=@customer.last_name %>
-    <%=@customer.first_name %>さんの会員詳細</h2>
-<%=image_tag @customer.get_profile_image(50,50) %>
-<%=@customer.last_name %>
-<%=@customer.first_name %>
-<p>自己紹介:<%=@customer.introduction %></p>
-<p>会員ステータス:<%=@status %></p>
-<p>メールアドレス:<%=@customer.email %></p>
-<%= link_to "編集する",edit_admin_customer_path(@customer.id) %>
+<%#=render 'admin/sidebar', genres: @genres %>
+  <div class="row">
+    <div class="col-9">
+      <h2>
+        <%=@customer.last_name %>
+        <%=@customer.first_name %>さんの会員詳細
+      </h2>
+        <%=image_tag @customer.get_profile_image(100,100),class:"img-thumbnail" %>
+        <%=@customer.last_name %>
+        <%=@customer.first_name %>
+      <p>会員ステータス:<%=@status %></p>
+         <%= link_to "フォロー一覧", customer_followings_path(@customer.id),class:"btn btn-outline-primary float-right" %>
+         <%= link_to "フォロワー一覧",  customer_followers_path(@customer.id),class:"btn btn-outline-primary float-right" %>
+      <p>メールアドレス:<%=@customer.email %></p>
+      <%= link_to "編集する",edit_admin_customer_path(@customer.id) %>
+      <p>自己紹介<br>
+      <%=@customer.introduction %></p>
 
+      <ul class="nav nav-tabs nav-fill mb-4">
+          <li class="nav-item">
+            <%= link_to "投稿したレシピ",admin_customer_path(@customer) ,class:"nav-link #{@nice.present? ? '' : 'active'}" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "いいねしたレシピ",admin_customer_path(@customer,nice: true) ,class:"nav-link #{@nice.present? ? 'active' : ''}" %>
+          </li>
+        </ul>
 
+          <div class="row">
+            <div class="col-12">
+              <div class="row">
+                <% @posts.each do |post| %>
+                <div class="col-4">
+                  <div class="card mb-4">
+                    <% if post.images.attached? && post.images.first.present? %>
+                      <%= link_to admin_post_path(post.id) do %>
+                        <%=image_tag post.get_image(300,300), class: "card-img-top", size: "150x150"%>
+                      <% end %>
+                    <% end %>
+                    <div class="card-body">
+                     <h5 class="card-title"><%=post.title %></h5>
+                     <div class="card-text">
 
-<h4>投稿した記事</h4>
-<% @posts.each do |f| %>
-   <% if f.images.attached? && f.images.first.present? %>
-      <%= link_to admin_post_path(f.id) do %>
-        <%=image_tag f.get_image(100,100) %>
-      <% end %>
-    <% end %>
-     <p>タイトル:<%=f.title %></p>
-     <p>ジャンル:<%=f.genre.name %></p>
-     <p>投稿日:<%= f.created_at.strftime('%Y/%m/%d') %></p>
-     <p><%= link_to "#{f.comments.count} コメント", admin_post_path(f.id) %></p>
-     <%= link_to "削除する",admin_post_path(f.id) ,method: :delete , data: {confirm: "本当に削除しますか？"} %>
-<% end %>
-
-
+                       <p><%= post.created_at.strftime('%Y/%m/%d') %></p>
+                       <p><%=post.customer.last_name %>
+                       <%=post.customer.first_name %></p>
+                       <p><%= link_to "#{post.nices.count} いいね", admin_post_path(post.id) %></p>
+                       <p><%= link_to "#{post.comments.count} コメント", admin_post_path(post.id) %></p>
+                       <%= link_to "削除する",admin_post_path(@customer.id,post.id) ,method: :delete , data: {confirm: "本当に削除しますか？"} %>
+                     </div>
+                    </div>
+                  </div>
+                </div>
+                <% end %>
+              </div>
+            </div>
+          </div>
+        </div>
+  <div class="col-3">
+     <%=render 'public/sidebar', genres: @genres %>
+  </div>
+</div>
 
