--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,30 +1,52 @@
-<%=render'admin/header'%>
-<%=render 'admin/sidebar', genres: @genres %>
+<div class="container" >
+  <div class="row">
+    <div class="col-md-12">
+    <%=render 'admin/header' %>
+    </div>
+  </div>
 
-<h2>レシピ一覧</h2>
-検索結果 <%= @post_count %>件<br>
-<% @posts.each do |post| %>
-
-  <%=image_tag post.customer.get_profile_image(50,50) %>
-  <% if post.customer.is_deleted == true %>
-    退会したユーザー
-  <% end %>
-    <%=post.customer.last_name %>
-    <%=post.customer.first_name %>
-    <% if post.images.attached? && post.images.first.present? %>
-      <%= link_to admin_post_path(post.id) do %>
-        <%=image_tag post.get_image(100,100) %>
+  <div class="row">
+    <div class="col-9">
+      <h2>レシピ一覧</h2>
+      <p>検索結果 <%= @post_count %>件</p>
+      <div class="row">
+        <% @posts.each do |post| %>
+          <div class="col-4">
+            <div class="card mb-4">
+              <% if post.images.attached? && post.images.first.present? %>
+                  <%= link_to admin_post_path(post.id) do %>
+                  <%=image_tag post.get_image(300,300), class: "card-img-top", size: "150x150" %>
+                  <% end %>
+              <% end %>
+              <div class="card-body">
+                <h5 class="card-title"><%= post.title %></h5>
+                <%= link_to admin_post_path(post.id) do %>
+                  <%=image_tag post.customer.get_profile_image(50,50) %>
+                  <p class="card-text">
+                    <% if post.customer.is_deleted == true %>
+                      退会したユーザー
+                    <% end %>
+                    <%=post.customer.last_name %>
+                    <%=post.customer.first_name %>
+                <% end %>
+                </p>
+                <div class="card-text">
+                  <p>投稿日:<%= post.created_at.strftime('%Y/%m/%d') %></p>
+                  <p><%= link_to "#{post.nices.count} いいね", admin_post_path(post.id) %></p>
+                  <p><%= link_to "#{post.comments.count} コメント", admin_post_path(post.id) %></p>
+                </div>
+              </div>
+            </div>
+          </div>
         <% end %>
-  <% end %>
-    <p>タイトル:<%= post.title %></p>
-    <p>ジャンル:<%=post.genre.name %></p>
-    <p>投稿日:<%= post.created_at.strftime('%Y/%m/%d') %></p>
-    <p><%= link_to "#{post.nices.count} いいね", admin_post_path(post.id) %></p>
-    <p><%= link_to "#{post.comments.count} コメント", admin_post_path(post.id) %></p>
-
-<% end %>
-
- <%= paginate @posts %>
+        <%= paginate @posts %>
+      </div>
+      </div>
+    <div class="col-3">
+      <%=render 'admin/sidebar', genres: @genres %>
+    </div>
+  </div>
+</div>
 
 
 
