--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -19,7 +19,7 @@
                   <% end %>
               <% end %>
               <div class="card-body">
-                <h5 class="card-title"><%= post.title %></h5>
+                <h5 class="card-title card-view"><%= post.title %></h5>
                 <%= link_to admin_post_path(post.id) do %>
                   <%=image_tag post.customer.get_profile_image(50,50) %>
                   <p class="card-text">
