--- a/app/views/admin/relationships/followers.html.erb
+++ b/app/views/admin/relationships/followers.html.erb
@@ -1,17 +1,16 @@
 <div class="container" >
   <div class="row">
     <div class="col-md-12">
-    <%=render 'public/header' %>
+    <%=render 'admin/header' %>
     </div>
   </div>
   <div class="row">
     <div class="col-9">
       <h2><%=@customer.last_name %><%=@customer.first_name %>さんのフォロワー</h2>
-      <%=render 'public/relationships/follow',customers: @customers %>
+      <%=render 'admin/relationships/follow',customers: @customers %>
     </div>
     <div class="col-3">
-      <%=render 'public/sidebar', genres: @genres %>
+      <%=render 'admin/sidebar', genres: @genres %>
    </div>
   </div>
 </div>
-
