--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -55,7 +55,7 @@
                       <% end %>
                     <% end %>
                     <div class="card-body">
-                     <h5 class="card-title"><%=post.title %></h5>
+                     <h5 class="card-title card-view"><%= post.title %></h5>
                      <div class="card-text">
 
                        <p><%= post.created_at.strftime('%Y/%m/%d') %></p>
@@ -63,9 +63,13 @@
                        <%=post.customer.first_name %></p>
                        <p><%= link_to "#{post.nices.count} いいね", post_path(post.id) %></p>
                        <p><%= link_to "#{post.comments.count} コメント", post_path(post.id) %></p>
-                       <% if @customer==current_customer %>
-                       <%= link_to "削除する",destroy_path(@customer.id,post.id) ,method: :delete , data: {confirm: "本当に削除しますか？"} %>
-                       <% end %>
+                       <% unless @nice %>
+                      　　 <%= link_to "削除する",destroy_path(@customer.id,post.id) ,method: :delete , data: {confirm: "本当に削除しますか？"} %>
+                       <% else %>
+                         <%if post.customer== current_customer %>
+                         　 <%= link_to"削除する",destroy_path(@customer.id,post.id) ,method: :delete , data: {confirm: "本当に削除しますか？"} %>
+                         <%end%>
+                       <%end%>
                      </div>
                     </div>
                   </div>
