--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,30 +1,46 @@
-<%=render 'admin/header' %>
-<%=render 'admin/sidebar', genres: @genres %>
+<div class="container" >
+  <div class="row">
+    <div class="col-12">
+    <%=render 'admin/header' %>
+    </div>
+  </div>
 
-<h2>会員一覧</h2>
-<table>
-  <tr>
-    <th>会員id</th>
-    <th>氏名</th>
-    <th>メールアドレス</th>
-    <th>ステータス</th>
-  </tr>
-
- <% @customers.each do |customer| %>
-  <tr>
-    <td><%=customer.id %></td>
-    <td><%= link_to admin_customer_path(customer.id) do %>
-        <%=customer.last_name %>
-        <%=customer.first_name %>
-        <% end %></td>
-    <td><%=customer.email %></td>
-    <td><% if customer.is_deleted==true %>
-          退会
-         <%else%>
-          有効
-         <%end%></td>
-  </tr>
- <% end %>
-</table>
-
+<%#=render 'admin/sidebar', genres: @genres %>
+  <div class="row">
+    <div class="col-9">
+      <h2>会員一覧</h2>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">会員id</th>
+            <th scope="col">氏名</th>
+            <th scope="col">メールアドレス</th>
+            <th scope="col">ステータス</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @customers.each do |customer| %>
+            <tr>
+              <td><%=customer.id %></td>
+              <td><%= link_to admin_customer_path(customer.id) do %>
+                  <%=customer.last_name %>
+                  <%=customer.first_name %>
+                  <% end %></td>
+              <td><%=customer.email %></td>
+              <td><% if customer.is_deleted==true %>
+                    退会
+                   <%else%>
+                    有効
+                   <%end%></td>
+            </tr>
+           <% end %>
+        </tbody>
+      </table>
+      <% paginate @customers %>
+    </div>
+    <div class="col-3">
+     <%=render 'public/sidebar', genres: @genres %>
+    </div>
+  </div>
+</div>
 
