--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,9 +1,9 @@
 <div class="container" >
-    <div class="row">
-      <div class="col-12">
-      <%=render 'admin/header' %>
-      </div>
+  <div class="row">
+    <div class="col-12">
+    <%=render 'admin/header' %>
     </div>
+  </div>
 
   <div class="row">
     <div class="col-9">
@@ -57,6 +57,7 @@
                   </div>
                 </div>
                 <% end %>
+                <% paginate @posts %>
               </div>
             </div>
           </div>
