--- a/app/views/admin/relationships/_follow.html.erb
+++ b/app/views/admin/relationships/_follow.html.erb
@@ -10,6 +10,7 @@
         </tr>
       </thead>
       <tbody>
+        <h5><%=@customers_count %>人</h5>
         <% customers.each do |customer| %>
           <tr>
             <td>
@@ -18,6 +19,9 @@
             <td>
               <%= link_to admin_customer_path(customer.id) do %>
               <%= customer.last_name %><%= customer.first_name %>
+              <% end %>
+              <% if customer.is_deleted==true %>
+              退会したユーザー
               <% end %>
             </td>
             <td>
