--- a/app/views/public/relationships/_follow.html.erb
+++ b/app/views/public/relationships/_follow.html.erb
@@ -11,7 +11,9 @@
         </tr>
       </thead>
       <tbody>
+        <h5><%=@customers_count %>人</h5>
         <% customers.each do |customer| %>
+        <%# unless @customer.is_deleted==true %>
           <tr>
             <td>
               <%= image_tag customer.get_profile_image(50, 50) %>
@@ -32,6 +34,7 @@
               <% end %>
             </td>
           </tr>
+        <%# end %>
         <% end %>
       </tbody>
     </table>
