--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,18 +1,31 @@
-<%=render 'admin/header' %>
-<%=render 'admin/sidebar', genres: @genres %>
+<div class="container" >
+  <div class="row">
+    <div class="col-12">
+    <%=render 'admin/header' %>
+    </div>
+  </div>
 
-<% if @genre.errors.any? %>
-    <%= @genre.errors.count %>件のエラーが発生しました
-    <ul>
-      <% @genre.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
- <% end %>
-
- <h2>ジャンル編集</h2>
- <%=form_with model: @genre, url: admin_genre_path do |f| %>
-  <h4>ジャンル名</h4>
-   <%=f. text_field:name %>
-   <%=f. submit '変更を保存' %>
-  <% end %>
+      <%#=render 'admin/sidebar', genres: @genres %>
+  <div class="row">
+    <div class="col-9">
+        <h2>ジャンル編集</h2>
+        <% if @genre.errors.any? %>
+          <%= @genre.errors.count %>件のエラーが発生しました
+          <ul>
+            <% @genre.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        <% end %>
+        <%=form_with model: @genre, url: admin_genre_path,class:"form-inline my-2 my-lg-0" do |f| %>
+          <div class="form-group">
+          <%=f. text_field:name,:placeholder => "ジャンル名",class:"form-control mr-sm-2" %>
+          <%=f. submit '変更を保存',class:"btn btn-outline-primary my-2 my-sm-0" %>
+        <% end %>
+        </div>
+    </div>
+    <div class="col-3">
+     <%=render 'admin/sidebar', genres: @genres %>
+    </div>
+  </div>
+</div>
