--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,25 +1,44 @@
-<%=render 'admin/header' %>
-<%=render 'admin/sidebar',genres: @genres %>
+<div class="container" >
+  <div class="row">
+    <div class="col-12">
+    <%=render 'admin/header' %>
+    </div>
+  </div>
 
- <% if @genre.errors.any? %>
-    <%= @genre.errors.count %>件のエラーが発生しました
-    <ul>
-      <% @genre.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
- <% end %>
+  <div class="row">
+    <div class="col-9">
+        <h2>ジャンル一覧・追加</h2>
+        <% if @genre.errors.any? %>
+          <%= @genre.errors.count %>件のエラーが発生しました
+          <ul>
+            <% @genre.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        <% end %>
+        <%=form_with model: @genre, url: admin_genres_path,class:"form-inline my-2 my-lg-0"  do |f| %>
+        <div class="form-group">
+          <%=f.text_field:name,:placeholder => "ジャンル名",class:"form-control mr-sm-2" %>
+          <%=f.submit '新規登録',class:"btn btn-outline-primary my-2 my-sm-0" %>
+        </div>
+        <% end %>
 
-  <h2>ジャンル一覧・追加</h2>
-  <%=form_with model: @genre, url: admin_genres_path do |f| %>
-    <p>ジャンル名</p>
-    <%=f.text_field:name %>
-    <%=f.submit '新規登録' %>
-  <% end %>
-
-<p>登録されたジャンル</p>
-<% @genres.each do |genre| %>
-<%=genre.name %>
-<%= link_to '編集', edit_admin_genre_path(genre.id) %>
-<%= link_to '削除', admin_genre_path(genre.id) ,method: :delete %><br>
-<% end %>
+      <h5 class="genre-table">登録されたジャンル</h5>
+      <table class="table">
+          <tbody>
+            <% @genres.each do |genre| %>
+            <tr>
+              <td><%=genre.name %></td>
+              <td><%= link_to '編集', edit_admin_genre_path(genre.id) %></td>
+              <td><%= link_to '削除', admin_genre_path(genre.id) ,method: :delete %></td>
+            </tr>
+            <% end %>
+          </tbody>
+      </table>
+      <% paginate @genres %>
+    </div>
+    <div class="col-3">
+     <%=render 'admin/sidebar', genres: @genres %>
+    </div>
+  </div>
+</div>
