--- a/app/views/admin/_header.html.erb
+++ b/app/views/admin/_header.html.erb
@@ -28,6 +28,9 @@
             </li>
              <% else %>
             <li class="nav-item">
+              <%= link_to "ホーム", root_path,class:"nav-link" %>
+            </li>
+            <li class="nav-item">
               <%= link_to "新規登録",new_customer_registration_path,class:"nav-link" %>
             </li>
             <li class="nav-item">
