--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -13,7 +13,7 @@
           <%=@customer.last_name %>
           <%=@customer.first_name %>
           <% end %>
-          <div class="row">
+          <div class="row mb-4">
             <div class="col-8">
               <% if @post.images.attached? %>
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
