--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -37,6 +37,8 @@
               </div>
             </div>
           <% end %>
+        </div>
+        <div class="d-flex justify-content-center">
           <%= paginate @posts %>
         </div>
         </div>
@@ -45,6 +47,4 @@
     </div>
   </div>
 </div>
-
-
 
