--- a/app/views/admin/_sidebar.html.erb
+++ b/app/views/admin/_sidebar.html.erb
@@ -1,4 +1,4 @@
-
+<div class="d-sm-none d-md-block">
 <table class="table">
  <tbody>
    <tr>
@@ -12,6 +12,7 @@
   </tr>
   <% end %>
 </table>
+</div>
 
 
 
