--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -30,7 +30,7 @@
             <tr>
               <td><%=genre.name %></td>
               <td><%= link_to '編集', edit_admin_genre_path(genre.id) %></td>
-              <td><%= link_to '削除', admin_genre_path(genre.id) ,method: :delete %></td>
+              <td><%= link_to '削除', admin_genre_path(genre.id) ,method: :delete,data: { confirm: '本当に削除しますか？' } %></td>
             </tr>
             <% end %>
           </tbody>
