--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,15 +1,15 @@
 <div class="container" >
     <div class="row">
       <div class="col-12">
-      <%=render 'public/header' %>
+      <%=render 'public/header', genres: @genres  %>
       </div>
     </div>
 
 
     <div class="row">
-      <div class="col-9">
+      <div class="col-md-9 col-sm-12">
         <div class="row">
-          <div class="col-8">
+          <div class="col-md-8 col-sm-12">
             <h2>プロフィール編集</h2>
               <% if @customer.errors.any? %>
                 <%= @customer.errors.count %>件のエラーが発生しました
@@ -53,7 +53,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-md-3">
        <%=render 'public/sidebar', genres: @genres %>
       </div>
     </div>
