--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,18 +1,18 @@
 <div class="container" >
   <div class="row">
     <div class="col-md-12">
-    <%=render 'public/header' %>
+    <%=render 'public/header', genres: @genres  %>
     </div>
   </div>
 
 
   <div class="row">
-    <div class="col-9">
+    <div class="col-md-9 col-sm-12">
         <h2>レシピの一覧</h2>
         <p>検索結果 <%= @post_count %>件</p>
         <div class="row">
           <% @posts.each do |post| %>
-            <div class="col-4">
+            <div class="col-md-4 col-sm-6">
               <div class="card mb-4">
                 <% if post.images.attached? && post.images.first.present? %>
                   <%= link_to post_path(post.id) do %>
@@ -42,7 +42,7 @@
           <%= paginate @posts %>
         </div>
         </div>
-    <div class="col-3">
+    <div class="col-md-3">
       <%=render 'public/sidebar', genres: @genres %>
     </div>
   </div>
