--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,12 +1,12 @@
 <div class="container" >
   <div class="row">
     <div class="col-12">
-    <%=render 'admin/header' %>
+    <%=render 'admin/header', genres: @genres %>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-9">
+    <div class="col-md-9 col-sm-12">
         <h2>ジャンル一覧・追加</h2>
         <% if @genre.errors.any? %>
           <%= @genre.errors.count %>件のエラーが発生しました
@@ -37,7 +37,7 @@
       </table>
       <% paginate @genres %>
     </div>
-    <div class="col-3">
+    <div class="col-md-3">
      <%=render 'admin/sidebar', genres: @genres %>
     </div>
   </div>
