--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,12 +1,12 @@
 <div class="container" >
   <div class="row">
-    <div class="col-md-12">
-    <%=render 'admin/header' %>
+    <div class="col-12">
+    <%=render 'admin/header', genres: @genres %>
     </div>
   </div>
 
       <div class="row">
-        <div class="col-9">
+        <div class="col-md-9 col-sm-12">
           <h2>レシピの詳細</h2>
           <%= link_to admin_customer_path(@customer.id) do %>
           <%=image_tag @customer.get_profile_image(50,50) %>
@@ -14,7 +14,7 @@
           <%=@customer.first_name %>
           <% end %>
           <div class="row mb-4">
-            <div class="col-8">
+            <div class="col-md-8 col-sm-12">
               <% if @post.images.attached? %>
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                   <ol class="carousel-indicators">
@@ -77,7 +77,7 @@
 
           </div>
        </div>
-      <div class="col-3">
+      <div class="col-md-3">
          <%=render 'admin/sidebar', genres: @genres %>
       </div>
   </div>
