--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,12 +1,12 @@
 <div class="container" >
   <div class="row">
     <div class="col-12">
-    <%=render 'admin/header' %>
+    <%=render 'admin/header', genres: @genres %>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-9">
+    <div class="col-md-9 col-sm-12">
       <h2>
         <%=@customer.last_name %>
         <%=@customer.first_name %>さんの会員詳細
@@ -35,7 +35,7 @@
             <div class="col-12">
               <div class="row">
                 <% @posts.each do |post| %>
-                <div class="col-4">
+                <div class="col-md-4 col-sm-12">
                   <div class="card mb-4">
                     <% if post.images.attached? && post.images.first.present? %>
                       <%= link_to admin_post_path(post.id) do %>
@@ -62,7 +62,7 @@
             </div>
           </div>
         </div>
-  <div class="col-3">
+  <div class="col-md-3">
      <%=render 'public/sidebar', genres: @genres %>
   </div>
 </div>
