--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -27,7 +27,7 @@
                     <%=post.customer.first_name %><br>
                 <% end %>
                     <% if post.customer.is_deleted == true %>
-                      退会したユーザー
+                      退会した会員
                     <% end %>
                 </p>
                 <div class="card-text">
