--- a/app/views/admin/_header.html.erb
+++ b/app/views/admin/_header.html.erb
@@ -15,7 +15,7 @@
           <ul class="navbar-nav mr-auto">
             <% if admin_signed_in? %>
             <li class="nav-item active">
-              <%= link_to "投稿一覧", admin_posts_path,class:"nav-link" %>
+              <%= link_to "レシピ一覧", admin_posts_path,class:"nav-link" %>
             </li>
             <li class="nav-item">
               <%= link_to "会員一覧", admin_customers_path,class:"nav-link" %>
