--- a/app/views/admin/relationships/followings.html.erb
+++ b/app/views/admin/relationships/followings.html.erb
@@ -10,9 +10,9 @@
       <div class="d-flex justify-content-between">
         <h5><%=@customers_count %>人</h5>
         <% if params[:filter] %>
-          <%= link_to "退会したユーザーを表示する",admin_customer_followings_path(@customer.id),class: "btn btn-outline-primary" %>
+          <%= link_to "退会した会員を表示",admin_customer_followings_path(@customer.id),class: "btn btn-outline-primary" %>
         <% else %>
-          <%= link_to "退会したユーザーを非表示",admin_customer_followings_path(@customer.id,{filter: "only_active"}),class: "btn btn-outline-primary" %>
+          <%= link_to "退会した会員を非表示",admin_customer_followings_path(@customer.id,{filter: "only_active"}),class: "btn btn-outline-primary" %>
         <% end %>
       </div>
       <%=render 'admin/relationships/follow',customers: @customers %>
