--- a/app/views/public/_header.html.erb
+++ b/app/views/public/_header.html.erb
@@ -19,7 +19,7 @@
                   <%= link_to "マイページ", customer_path(current_customer.id),class:"nav-link" %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to "投稿する", new_post_path,class:"nav-link" %>
+                  <%= link_to "レシピを投稿する", new_post_path,class:"nav-link" %>
                 </li>
               <% end %>
                 <li class="nav-item">
