--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -64,13 +64,13 @@
                        <%=post.customer.first_name %></p>
                        <p><%= link_to "#{post.nices.count} いいね", post_path(post.id) %></p>
                        <p><%= link_to "#{post.comments.count} コメント", post_path(post.id) %></p>
-                       <% unless @nice %>
-                      　　 <%= link_to "削除する",destroy_path(@customer.id,post.id) ,method: :delete , data: {confirm: "本当に削除しますか？"} %>
-                       <% else %>
-                         <%if post.customer==current_customer %>
+                       <!--<%# unless @nice %>-->
+                      　<!--　 <%#= link_to "削除する",destroy_path(@customer.id,post.id) ,method: :delete , data: {confirm: "本当に削除しますか？"} %>-->
+                       <!--<%# else %>-->
+                         <%if (@customer.id == current_customer.id) && (post.customer.id == current_customer.id) %>
                          　 <%= link_to"削除する",destroy_path(@customer.id,post.id) ,method: :delete , data: {confirm: "本当に削除しますか？"} %>
                          <%end%>
-                       <%end%>
+                       <%#end%>
                      </div>
                     </div>
                   </div>
