--- a/app/views/admin/relationships/_follow.html.erb
+++ b/app/views/admin/relationships/_follow.html.erb
@@ -19,7 +19,7 @@
               <%= customer.last_name %><%= customer.first_name %>
               <% end %>
               <% if customer.is_deleted==true %>
-              退会したユーザー
+              退会した会員
               <% end %>
             </td>
             <td>
