--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -19,7 +19,7 @@
         <div><%= link_to "編集する",edit_admin_customer_path(@customer.id),class:"btn btn-outline-primary" %></div>
         <p>会員ステータス:<%=@status %></p>
         <p>メールアドレス:<%=@customer.email %></p>
-        <p>自己紹介<br>
+        <p>~自己紹介~<br>
         <%=@customer.introduction %></p>
 
         <ul class="nav nav-tabs nav-fill mb-4">
