--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -32,7 +32,7 @@
           <% end %>
          <% end %>
         <% end %>
-        <p>自己紹介<br>
+        <p>~自己紹介~<br>
         <%=@customer.introduction %></p>
 
         <ul class="nav nav-tabs nav-fill mb-4">
